# pydify_plus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  RELEASE.md  __init__.py  async_client.py  base.py  config.py  errors.py  models.py  pyproject.toml  pytest.ini  requirements.txt  sync_client.py  types.py  utils.py
.github/workflows/: ci.yml  release.yml
apis/: __init__.py  app_config.py  base.py  blocks.py  chat.py  dataset.py  documents.py  feedback.py  files.py  models.py  sessions.py  tags.py  textgen.py  workflows.py
docs/: API_REFERENCE.md
examples/: README.md  example_async.py  example_sync.py  fastapi_example.py
scripts/: bump_version.py  release.py
tests/: conftest.py  test_app_config.py  test_base_client.py  test_blocks.py  test_chat.py  test_dataset.py  test_documents.py  test_feedback.py  test_files.py  test_models.py  test_sessions.py  test_streaming.py  test_tags.py  test_textgen.py  test_workflows.py
